<resources>
    <string name="app_name">Trabalho</string>
    <string name="nome_upt">Universidade Portucalense</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">Procurar...</string>
    <string name="col1">Nome</string>
    <string name="col2">UC</string>
    <string name="col3">Nota</string>
    <string name="fila1Nome">Diogo</string>
    <string name="fila1UC">20</string>
    <string name="fila1Nota">LAM</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="nota">Notas</string>
    <string name="horario">Horário</string>
    <string name="disciplina">Disciplinas</string>
    <string name="siupt">SIUPT</string>
    <string name="web">WEBMAIL</string>
    <string name="sair">Sair</string>
    <string name="voltar">Voltar</string>

    <string-array name="my_header">
        <item></item>
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>quinta</item>
        <item>Sexta</item>
    </string-array>
</resources>