<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="40dp">
        <TableRow
            android:background="@color/AzulUPT">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"

                />

        </TableRow>
        <!-- Table Data -->
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fila1Nome"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fila1UC"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal"

                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fila1Nota"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:layout_gravity="center_horizontal"

                />

        </TableRow>
    </TableLayout>

</RelativeLayout>
